--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -6,6 +6,9 @@
 @import "tailwindcss";
 @import "tw-animate-css";
 
+@import "filepond/dist/filepond.min.css";
+@import "filepond-plugin-image-preview/dist/filepond-plugin-image-preview.css";
+
 @custom-variant dark (&:is(.dark *));
 
 .nunito {
